--- a/catalog/view/theme/default/zf_1.html
+++ b/catalog/view/theme/default/zf_1.html
@@ -223,7 +223,6 @@
 						<div class="div_one clearfix">
 							<h2><span>1</span>Select the shipping address</h2>
 							<ul class="address_ul clearfix">
-
 								<li class="active clearfix">
 									<div class="text_li">
 										<span>LIUBIHUI</span>
@@ -236,7 +235,6 @@
 										<a class="def" href="###">Default</a>
 									</div>
 								</li>
-
 								<li class="clearfix">
 									<div class="text_li">
 										<span>LIUBIHUI</span>
@@ -249,7 +247,18 @@
 										<a class="def" href="###">Default</a>
 									</div>
 								</li>
-								
+								<li class="clearfix">
+									<div class="text_li">
+										<span>LIUBIHUI</span>
+										<p>Jiangxia, baiyun district, guangzhou, guangdong province.</p>
+										<p>guangzhou 510000</p>
+										<span>Guangdong</span>
+										<span>China</span>
+										<span>+2345601634559</span>
+										<a class="a_btn" href="###">Edit</a>
+										<a class="def" href="###">Default</a>
+									</div>
+								</li>
 								<li class="clearfix">
 									<a class="add_a" href="###"><span>Add new address</span></a>
 								</li>
