--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -244,7 +244,7 @@
 	.pro_det_content .price_input input{display: inline-block;width: 2.08vw;height: 2.08vw;line-height: 2.08vw; float: left;
 	border-right: 1px solid#ccc;border-left: 1px solid#ccc;text-align: center;font-size: 0.83vw;}
 	.pro_det_content .select_div{background: #fff;text-align: center;position: relative;}
-	.pro_det_content .select_div button{width: 8.33vw; margin: auto;display: inline-block; border: 1px solid #ccc;height: 3.125vw;
+	.pro_det_content .select_div button{ margin: auto;display: inline-block; border: 1px solid #ccc;height: 3.125vw;
 	font-size: 0.83vw;line-height: 2.08vw;background: #fff;box-sizing: content-box;padding: 0 1.04vw;}
 	.pro_det_content .select_div button:hover{background: #f5f5f5;cursor: pointer;}
 	.pro_det_content .select_div button span{background: url(../img/png/down.png) no-repeat right center;background-size: 0.72vw;padding-right: 1.7vw;}
@@ -688,7 +688,7 @@
 	.top_ol.liucheng.ol_2 li:nth-child(2) img{opacity: 1;}
 	.top_ol.liucheng.ol_2 li:nth-child(2) span{border: 1px solid #d5af74;background: #d5af74;}
 	.top_ol.liucheng.ol_2 li:nth-child(2) p{font-weight: bold;}
-	.address_content .left .text {padding: 2.08vw ;background: url(../img/loading.gif) no-repeat center top 6vw;}
+	.address_content .left .text {padding: 2.08vw ;background: url(../img/loading.gif) no-repeat center top 8vw;}
 	.address_content .left .text .btn240{width: 3.6rem;height: 0.6rem;text-align: center;line-height: 0.6rem;font-size: 0.16rem;color: #fff;
     display: block;border-radius: 0.5rem;font-weight: normal;
     background: -webkit-linear-gradient(left, #f23030 , #fb3500);background: -o-linear-gradient(right, #f23030, #fb3500);
@@ -1583,26 +1583,15 @@
 	.address .pay_ul>li.active{background: #fff9f9;}
 	.address .pay_ul>li>span{font-size: 0.26rem;font-family: helveticaei;color: #666;display: block;margin-bottom: 0.24rem;clear: both;}
 	.address .pay_ul>li label{display: block;width: 100%;box-sizing: border-box;cursor: pointer;}
-	.address .pay_ul>li label.gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem;padding-left: 3.07rem;}
+	.address .pay_ul>li label.gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem;padding-left: 0.5rem;}
 	.address .pay_ul>li.active label.gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem;}
-	.address .pay_ul>li label img{display: inline-block;float: left;width: 1.32rem;height: 0.4rem;margin: 0 0.15rem 0 0rem;}
+	.address .pay_ul li.active .gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem;} 
+	
+	.address .pay_ul>li label .img{width: 2.4rem;height: 0.5rem;display: inline-block;float: left;}
+	.address .pay_ul>li label img{display: inline-block;float: left;/*width: 1.32rem;height: 0.4rem;*/margin: 0 0.15rem 0 0rem;}
 	.address .pay_ul>li label p{display: inline-block;float: left;font-family: helvetica;font-size: 0.22rem;color: #333;line-height: 0.4rem;cursor: pointer;}
 	.address .pay_ul>li p.ts_p{color: #f33030;height: 0.32rem;line-height: 0.32rem;padding-left: 0.45rem;background: url(../img/png/new_7.png) no-repeat left center/0.32rem;
 	display: block;clear: both;margin:0.15rem 0 0.3rem 0;}
-	.address .pay_ul li:nth-child(1) .gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem , url(../img/png/new_10_1.png) no-repeat left 0.7rem center/1.50rem 0.50rem;} 
-	.address .pay_ul li:nth-child(2) .gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem , url(../img/png/new_10_2.png) no-repeat left 0.7rem center/1.32rem 0.34rem;} 
-	.address .pay_ul li:nth-child(3) .gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem , url(../img/png/new_10_3.png) no-repeat left 0.7rem center/1.90rem 0.35rem;} 
-	.address .pay_ul li:nth-child(4) .gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem , url(../img/png/new_10_4.png) no-repeat left 0.7rem center/1.58rem 0.44rem;} 
-	.address .pay_ul li:nth-child(5) .gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem , url(../img/png/new_10_5.png) no-repeat left 0.7rem center/1.79rem 0.53rem;} 
-	.address .pay_ul li:nth-child(6) .gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem , url(../img/png/new_10_6.png) no-repeat left 0.7rem center/1.81rem 0.40rem;} 
-	.address .pay_ul li:nth-child(7) .gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem , url(../img/png/new_10_7.png) no-repeat left 0.7rem center/1.98rem 0.36rem;} 
-	.address .pay_ul li.active:nth-child(1) .gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem , url(../img/png/new_10_1.png) no-repeat left 0.7rem center/1.50rem 0.50rem;} 
-	.address .pay_ul li.active:nth-child(2) .gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem , url(../img/png/new_10_2.png) no-repeat left 0.7rem center/1.32rem 0.34rem;} 
-	.address .pay_ul li.active:nth-child(3) .gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem , url(../img/png/new_10_3.png) no-repeat left 0.7rem center/1.90rem 0.35rem;} 
-	.address .pay_ul li.active:nth-child(4) .gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem , url(../img/png/new_10_4.png) no-repeat left 0.7rem center/1.58rem 0.44rem;} 
-	.address .pay_ul li.active:nth-child(5) .gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem , url(../img/png/new_10_5.png) no-repeat left 0.7rem center/1.79rem 0.53rem;} 
-	.address .pay_ul li.active:nth-child(6) .gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem , url(../img/png/new_10_6.png) no-repeat left 0.7rem center/1.81rem 0.40rem;} 
-	.address .pay_ul li.active:nth-child(7) .gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem , url(../img/png/new_10_7.png) no-repeat left 0.7rem center/1.98rem 0.36rem;} 
 	.address .zf3_btn{width: 3.2rem;height: 0.6rem;font-size: 0.18rem;border-radius: 50px;line-height: 0.6rem; }
 	
 	.zf_3 .bot{background: #f0f0f0;padding: 0.4rem 0.3rem;margin-bottom: 0.8rem;}
@@ -1662,13 +1651,13 @@
 	.login form.lr_form label input:-moz-placeholder{color: #ccc;}
 	.login form.lr_form label input::-moz-placeholder{color: #ccc;}
 	.login form.lr_form label input:-ms-input-placeholder{color: #ccc;}
-	.login form.lr_form label span{font-size: 0.24rem;line-height: 0.46rem;color: #666;display: block;}
-	.login form.lr_form label input{margin-bottom: 0.1rem;font-size: 0.24rem;font-size: 0.24rem;height: 0.67rem;line-height: 0.67rem;
-	border: 1px solid #ccc;box-sizing: border-box;border-radius: 0.08rem;padding: 0 0.2rem;}
+	.login form.lr_form label span{font-size: 0.28rem;line-height: 0.5rem;color: #666;display: block;}
+	.login form.lr_form label input{margin-bottom: 0.2rem;font-size: 0.24rem;font-size: 0.24rem;height: 0.8rem;line-height: 0.8rem;
+	border: 1px solid #666;box-sizing: border-box;border-radius: 0.08rem;padding: 0 0.2rem;}
 	.login form.lr_form label input:focus{border: 1px solid #ff6700;}
 	.login form.lr_form label p{color: #fd4f57;font-size: 0.18rem;margin-bottom: 0.1rem;display: none;}
 	.login form.lr_form label p.off{display: block;}
-	.login form.lr_form label a{font-size: 0.2rem;color: #666;line-height: 0.22rem;float: right;}
+	.login form.lr_form label a{font-size: 0.24rem;color: #666;line-height: 0.26rem;float: right;}
 	.login form .tj_input{height: 0.65rem;line-height: 0.65rem;margin: 1.29rem 0 0.4rem 0;font-size: 0.3rem;color: #fff;border-radius: 0.08rem;
 	 background: -webkit-linear-gradient(left, #fa4940 , #fa4940);background: -o-linear-gradient(right, #fa4940, #fa4940);
 	  background: -moz-linear-gradient(right, #fa4940, #fa4940); background: linear-gradient(to right, #fa4940 , #fa4940);}
@@ -1796,11 +1785,12 @@
 	.pro_det_content .yd_show{display: block;}
 	.pro_det_content .cart_attr{padding: 0.2rem 0.3rem;position: relative;}
 	.cart_attr li{line-height: 0.8rem;}
-	.cart_attr li span{font-size: 0.24rem;font-family: helvetica;color: #333;display: inline-block;width: 1.05rem;float: left;}
-	.cart_attr li em{display: inline-block;padding: 0 0.22rem;border-radius: 50px;background: #fff9f9;border:1px solid #f23030;
+	.cart_attr li span{font-size: 0.24rem;font-family: helvetica;color: #333;display: inline-block;width: 1.85rem;float: left;}
+	.cart_attr li em{display: none;padding: 0 0.22rem;border-radius: 50px;background: #fff9f9;border:1px solid #f23030;
 	font-size: 0.22rem;font-family: helveticai;height: 0.4rem;line-height: 0.4rem;float: left;margin: 0.2rem auto;}
+	.cart_attr li em.active{display: inline-block;}
 	.cart_attr .price_input{height: 0.8rem;padding: 0.2rem 0;}
-	.cart_attr .price_input p{font-size: 0.24rem;font-family: helvetica;display: inline-block;width: 1.05rem;height: 0.4rem;line-height: 0.4rem;float: left;}
+	.cart_attr .price_input p{font-size: 0.24rem;font-family: helvetica;display: inline-block;width: 1.85rem;height: 0.4rem;line-height: 0.4rem;float: left;}
 	.cart_attr .price_input .text{display: inline-block;height: 0.4rem;line-height: 0.4rem;}
 	.cart_attr .price_input .text span{display: inline-block;width: 0.4rem;height: 0.4rem;background: #f5f5f5;border-radius: 50%;float: left;}
 	.cart_attr .price_input .text span.subs{background:#f5f5f5 url(../img/png/new_3_.png) no-repeat center/0.17rem 0.03rem;}
@@ -1832,6 +1822,7 @@
 	.cart_tc .text .img span{font-family: helvetica;font-size: 0.3rem;color: #F23030;height: 2rem;line-height: 2rem;display: inline-block;float: left;}
 	.cart_tc .text .attr_ol{padding-top: 0.13rem;}
 	.cart_tc .text .attr_ol>li{border-bottom: 1px solid #eee;position: relative;}
+	.cart_tc .text .attr_ol>li.size:first-child .measurement{display: none;}
 	.cart_tc .text .attr_ol>li:last-child{border-bottom: 0;}
 	.cart_tc .text .attr_ol>li .bt_span{font-family: helvetica;font-size: 0.3rem;color: #333;margin: 0.28rem 0;display: inline-block;float: left;}
 	.cart_tc .text .attr_ul{margin:0 -0.18rem 0 -0.15rem;clear: both;}
@@ -1839,7 +1830,7 @@
 	padding: 0 0.31rem;height: 0.6rem;line-height: 0.6rem;margin:0 0.15rem 0.3rem 0.15rem;border: 1px solid transparent;}
 	.cart_tc .text .attr_ul>li.active{background: #fff9f9;border: 1px solid #f23030;}
 	.cart_tc .text .attr_ul>li.hui{color: #bababa;}
-	.cart_tc .text .attr_ol .measurement{position: absolute;top: 0.28rem;right: 0;font-family: helvetica;font-size: 0.22rem;color: #333;line-height: 0.34rem;z-index: 999;}
+	.cart_tc .text .attr_ol .measurement{position: absolute;top: 0.28rem;right: 0;font-family: helvetica;font-size: 0.22rem;color: #333;line-height: 0.34rem;z-index: 9;}
 	.cart_tc .text .attr_ol .price_input{display: inline-block;float: right;padding-top: 0.28rem;}
 	.cart_tc .text .price_input span{display: inline-block;width: 0.4rem;height: 0.4rem;background: #f5f5f5;border-radius: 0.12rem;float: left;}
 	.cart_tc .text .price_input span{display: inline-block;width: 0.6rem;height: 0.6rem;background: #f5f5f5;border-radius: 0.12rem;float: left;}
@@ -3057,23 +3048,29 @@
 	.zf_22 .pay_ul>li{border: none;padding: 0}
 	.zf_22 .pay_ul>li.active{background: transparent;}
 	
-	/***********zf_3**********************/
-	.zf_3 .pay_ul>li {margin-bottom: 0.2rem;}
-	.zf_3 .pay_ul>li label.gx{padding-left: 3.07rem;}
-	.zf_3 li:nth-child(1) .gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem , url(../img/png/new_10_1.png) no-repeat left 0.7rem center/1.50rem 0.50rem;} 
-	.zf_3 li:nth-child(2) .gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem , url(../img/png/new_10_2.png) no-repeat left 0.7rem center/1.32rem 0.34rem;} 
-	.zf_3 li:nth-child(3) .gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem , url(../img/png/new_10_3.png) no-repeat left 0.7rem center/1.90rem 0.35rem;} 
-	.zf_3 li:nth-child(4) .gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem , url(../img/png/new_10_4.png) no-repeat left 0.7rem center/1.58rem 0.44rem;} 
-	.zf_3 li:nth-child(5) .gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem , url(../img/png/new_10_5.png) no-repeat left 0.7rem center/1.79rem 0.53rem;} 
-	.zf_3 li:nth-child(6) .gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem , url(../img/png/new_10_6.png) no-repeat left 0.7rem center/1.81rem 0.40rem;} 
-	.zf_3 li:nth-child(7) .gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem , url(../img/png/new_10_7.png) no-repeat left 0.7rem center/1.98rem 0.36rem;} 
-	.zf_3 li.active:nth-child(1) .gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem , url(../img/png/new_10_1.png) no-repeat left 0.7rem center/1.50rem 0.50rem;} 
-	.zf_3 li.active:nth-child(2) .gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem , url(../img/png/new_10_2.png) no-repeat left 0.7rem center/1.32rem 0.34rem;} 
-	.zf_3 li.active:nth-child(3) .gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem , url(../img/png/new_10_3.png) no-repeat left 0.7rem center/1.90rem 0.35rem;} 
-	.zf_3 li.active:nth-child(4) .gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem , url(../img/png/new_10_4.png) no-repeat left 0.7rem center/1.58rem 0.44rem;} 
-	.zf_3 li.active:nth-child(5) .gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem , url(../img/png/new_10_5.png) no-repeat left 0.7rem center/1.79rem 0.53rem;} 
-	.zf_3 li.active:nth-child(6) .gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem , url(../img/png/new_10_6.png) no-repeat left 0.7rem center/1.81rem 0.40rem;} 
-	.zf_3 li.active:nth-child(7) .gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem , url(../img/png/new_10_7.png) no-repeat left 0.7rem center/1.98rem 0.36rem;} 
+	
+	/***********zf_21**********************/
+	.pay_ul{padding-bottom: 0.4rem;}
+	.pay_ul>li{border: 1px solid #ddd;padding: 0.3rem 0.2rem;margin-bottom: 0.4rem;}
+	.pay_ul>li.active{background: #fff9f9;}
+	.pay_ul>li>span{font-size: 0.26rem;font-family: helveticaei;color: #666;display: block;margin-bottom: 0.24rem;clear: both;}
+	.pay_ul>li label{display: block;width: 100%;box-sizing: border-box;}
+	.pay_ul>li label.gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem;padding-left: 0.52rem;}
+	.pay_ul>li.active label.gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem;}
+	.pay_ul>li label .img{display: inline-block;width: 2.4rem;height: 0.5rem;float: left;}
+	.pay_ul>li label img{display: inline-block;float: left;margin: 0 0.15rem 0 0rem;height: auto;}
+	.pay_ul>li label p{display: inline-block;float: left;font-family: helvetica;font-size: 0.24rem;color: #333;line-height: 0.4rem;}
+	.pay_ul>li p.ts_p{color: #f33030;height: 0.32rem;line-height: 0.32rem;padding-left: 0.45rem;background: url(../img/png/new_7.png) no-repeat left center/0.32rem;
+	display: block;clear: both;margin:0.15rem 0 0.3rem 0;}
+	.pay_ul>li label.red p{color: #f33030;}
+	.pay_ul>li hr{width: 100%;height: 1px;background: #ddd;border: none;display: block;margin: 0.3rem 0;}
+	.zf_3 li:nth-child(1) .gx .img img{width: 1.50rem;} 
+	.zf_3 li:nth-child(2) .gx .img img{width: 1.32rem;} 
+	.zf_3 li:nth-child(3) .gx .img img{width: 1.90rem;} 
+	.zf_3 li:nth-child(4) .gx .img img{width: 1.58rem;} 
+	.zf_3 li:nth-child(5) .gx .img img{width: 1.79rem;} 
+	.zf_3 li:nth-child(6) .gx .img img{width: 1.81rem;} 
+	.zf_3 li:nth-child(7) .gx .img img{width: 1.98rem;} 
 	
 	.zf_3 .bot{background: #f0f0f0;padding: 0.4rem 0.3rem;margin-bottom: 0.8rem;}
 	.zf_3 .bot p{font-size: 0.24rem;font-family: helvetica;color: #666;}
