--- a/catalog/view/theme/default/zf_xuanz_fangshi.html
+++ b/catalog/view/theme/default/zf_xuanz_fangshi.html
@@ -223,36 +223,43 @@
 				<ul class="pay_ul clearfix">
 					<li class=" clearfix">
 						<label class="gx clearfix" for="">
+							<div class="img"><img src="img/png/new_10_1.png"/></div>
 							<p>Naira Account </p>
 						</label>
 					</li>
 					<li class=" clearfix">
 						<label class="gx clearfix" for="">
+							<div class="img"><img src="img/png/new_10_2.png"/></div>
 							<p>PayPal</p>
 						</label>
 					</li>
 					<li class=" clearfix">
 						<label class="gx clearfix" for="">
+							<div class="img"><img src="img/png/new_10_3.png"/></div>
 							<p>Credit Card</p>
 						</label>
 					</li>
 					<li class=" clearfix">
 						<label class="gx clearfix" for="">
+							<div class="img"><img src="img/png/new_10_4.png"/></div>
 							<p>Western Union </p>
 						</label>
 					</li>
 					<li class=" clearfix">
 						<label class="gx clearfix" for="">
+							<div class="img"><img src="img/png/new_10_5.png"/></div>
 							<p>Money Gram</p>
 						</label>
 					</li>
 					<li class=" clearfix">
 						<label class="gx clearfix" for="">
+							<div class="img"><img src="img/png/new_10_5.png"/></div>
 							<p>Bank Transfer</p>
 						</label>
 					</li>
 					<li class=" clearfix">
 						<label class="gx clearfix" for="">
+							<div class="img"><img src="img/png/new_10_7.png"/></div>
 							<p>Bank Transfer</p>
 						</label>
 					</li>
@@ -284,36 +291,43 @@
 							<ul class="pay_ul clearfix">
 								<li class=" clearfix">
 									<label class="gx clearfix" for="">
+										<div class="img"><img src="img/png/new_10_1.png"/></div>
 										<p>Naira Account </p>
 									</label>
 								</li>
 								<li class=" clearfix">
 									<label class="gx clearfix" for="">
+										<div class="img"><img src="img/png/new_10_2.png"/></div>
 										<p>PayPal</p>
 									</label>
 								</li>
 								<li class=" clearfix">
 									<label class="gx clearfix" for="">
+										<div class="img"><img src="img/png/new_10_3.png"/></div>
 										<p>Credit Card</p>
 									</label>
 								</li>
 								<li class=" clearfix">
 									<label class="gx clearfix" for="">
+										<div class="img"><img src="img/png/new_10_4.png"/></div>
 										<p>Western Union </p>
 									</label>
 								</li>
 								<li class=" clearfix">
 									<label class="gx clearfix" for="">
+										<div class="img"><img src="img/png/new_10_5.png"/></div>
 										<p>Money Gram</p>
 									</label>
 								</li>
 								<li class=" clearfix">
 									<label class="gx clearfix" for="">
+										<div class="img"><img src="img/png/new_10_6.png"/></div>
 										<p>Bank Transfer</p>
 									</label>
 								</li>
 								<li class=" clearfix">
 									<label class="gx clearfix" for="">
+										<div class="img"><img src="img/png/new_10_7.png"/></div>
 										<p>Bank Transfer</p>
 									</label>
 								</li>
