--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -1819,7 +1819,8 @@
 	.cart_tc .text .close_tc{width: 0.8rem;height: 0.8rem;display: block;position: absolute;top: 0.1rem;right: 0.03rem;
 	background: url(../img/png/close2.png) no-repeat center/0.22rem 0.22rem;}
 	.cart_tc .text .img img{display: inline-block;width: 2rem;height: 2rem;float: left;margin-right: 0.2rem;}
-	.cart_tc .text .img span{font-family: helvetica;font-size: 0.3rem;color: #F23030;height: 2rem;line-height: 2rem;display: inline-block;float: left;}
+	.cart_tc .text .img span{font-family: helvetica;font-size: 0.3rem;color: #F23030;height: 2rem;line-height: 2rem;display: inline-block;float: left;margin-right: 0.08rem}
+	.cart_tc .text .img i{font-size: 0.3rem;color: #999;text-decoration: line-through;font-family: helvetica;height: 2rem;line-height: 2rem;display: inline-block;float: left;}
 	.cart_tc .text .attr_ol{padding-top: 0.13rem;}
 	.cart_tc .text .attr_ol>li{border-bottom: 1px solid #eee;position: relative;}
 	.cart_tc .text .attr_ol>li.size:first-child .measurement{display: none;}
