--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -401,7 +401,10 @@
 	.gwc_pc .div2 p{display: inline-block;background: #f5f5f5;font-size:0.16rem;color: #666;border-radius: 20px;padding: 0 0.15rem;
 	height: 0.3rem;line-height: 0.3rem; margin: 0 0.52vw 0.73vw 0;float: left;}
 	.gwc_pc .div3{display: inline-block;float: left;width: 1.2rem ;height: 1.6rem;line-height: 1.6rem; position: absolute;left: 50%;text-align: center;}
-	.gwc_pc .div3 span.price{display: inline-block;font-size: 0.2rem;vertical-align: middle;}
+	.gwc_pc .div3 span.price{display: inline-block;font-size: 0.2rem;vertical-align: middle;height: 56px;text-align: center;}
+	.gwc_pc .div3 span.price i{width: 100%; line-height: 28px;display: inline-block;float: left;}
+	.gwc_pc .div3 span.price em{width: 100%; line-height: 28px;display: inline-block;float: left;color: #999;text-decoration: line-through;}
+	
 	.gwc_pc .div4{display: inline-block;float: left;width: 1.26rem ;height: 1.6rem;line-height: 1.6rem; position: absolute;right: 23%;text-align: center;}
 	.gwc_pc .div4 .price_input{border: 1px solid #ccc;width: 1.26rem;position: relative;display: inline-block;vertical-align: middle;background: #f5f5f5;}
 	.gwc_pc .div4 .price_input span{display: block;float: left; width: 0.4rem;height: 0.4rem;cursor: pointer;position: absolute;top:0;}
