--- a/catalog/view/theme/default/x_zf_2.html
+++ b/catalog/view/theme/default/x_zf_2.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>EDIT SHIPPING ADDRESS</title>
+		<title>SHIPPING METHOD</title>
 	</head>
 	<body>
 		<!--头部-->
@@ -209,247 +209,54 @@
 		
 			<div class="new_nav pc_hide clearfix">
 				<a class="fh" href="###"></a>
-				<p>EDIT SHIPPING ADDRESS</p>
+				<p>SHIPPING METHOD</p>
 			</div>
 		</div>
-		<!--内容-->
-		<!--pc内容-->
-		<div class="address add yd_hide clearfix">
-			<div class="content in_content address_content clearfix">
-				
-				<div class="left clearfix">
-					<div class="text  clearfix">
-						<div class="bg_fff">
-							<div class="del_address">
-								<p class="form_p">* Required fields</p>
-								<div class="del pc clearfix">
-									<svg t="1539766974948" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5269" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32">
-										<path d="M793.6 998.4H220.16c-51.2 0-97.28-40.96-97.28-97.28V261.12c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v645.12c0 25.6 20.48 46.08 46.08 46.08h573.44c25.6 0 46.08-20.48 46.08-46.08v-563.2c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v563.2c0 46.08-46.08 92.16-97.28 92.16z" p-id="5270" fill="#333"></path>
-										<path d="M51.2 266.24c-10.24 0-20.48-10.24-25.6-25.6 0-15.36 10.24-25.6 25.6-25.6l916.48-81.92c15.36 0 25.6 10.24 25.6 25.6s-10.24 25.6-25.6 25.6L51.2 266.24c5.12 0 0 0 0 0z" p-id="5271" fill="#333"></path>
-										<path d="M343.04 230.4c-10.24 0-20.48-10.24-25.6-25.6l-5.12-76.8C307.2 87.04 337.92 51.2 378.88 46.08l225.28-20.48c20.48 0 40.96 5.12 56.32 15.36 15.36 10.24 25.6 30.72 25.6 51.2l5.12 81.92c0 15.36-10.24 25.6-25.6 25.6s-25.6-10.24-25.6-25.6l-5.12-81.92c0-10.24-10.24-20.48-25.6-20.48l-225.28 25.6c-5.12 0-10.24 5.12-15.36 10.24-5.12 0-5.12 10.24-5.12 15.36L368.64 204.8c0 10.24-10.24 25.6-25.6 25.6 5.12 0 0 0 0 0zM435.2 768c-15.36 0-25.6-15.36-25.6-30.72V399.36c0-15.36 10.24-40.96 25.6-40.96s25.6 25.6 25.6 35.84v337.92c0 15.36-10.24 35.84-25.6 35.84zM588.8 768c-15.36 0-25.6-15.36-25.6-30.72V465.92c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v271.36c0 15.36-10.24 30.72-25.6 30.72z" p-id="5272" fill="#333"></path>
-									</svg>	
-								</div>
-							</div>
-							<form class="add_form clearfix">
-								<label for="">
-									<span>Frist Name *</span>
-									<input type="text" />
-									<p class="ts_ps">This field is required</p>
-								</label>
-								<label for="">
-									<span>Last Name *</span>
-									<input type="text" />
-									<p class="ts_ps">This field is required</p>
-								</label>
-								<label class="add_label" for="">
-									<span>Address *</span>
-									<input type="text" />
-									<input type="text" />
-									<p class="ts_ps">This field is required</p>
-								</label>
-								
-								<label for="">
-									<span>Country *</span>
-									<select name="">
-										<option value="">Country</option>
-										<option value="">Country</option>
-										<option value="">Country</option>
-										<option value="">Country</option>
-									</select>
-									<p class="ts_ps">This field is required</p>
-								</label>
-								<label for="">
-									<span>Post Code *</span>
-									<input type="text" />
-									<p class="ts_ps">This field is required</p>
-								</label>
-								<label for="">
-									<span>City *</span>
-									<input type="text" />
-									<p class="ts_ps">This field is required</p>
-								</label>
-								<label for="">
-									<span>State *</span>
-									<select name="">
-										<option value="">Select State</option>
-										<option value="">Select State</option>
-										<option value="">Select State</option>
-										<option value="">Select State</option>
-									</select>
-									<p class="ts_ps">This field is required</p>
-								</label>
-								<label for="">
-									<span>Phone *</span>
-									<input type="text" />
-									<p class="ts_ps">This field is required</p>
-								</label>
-								<button class="qx_btn" type="reset">cancel</button>
-								
-								<a class="btn240 clearfix clear" href="###">SAVE ADDRESS&nbsp;&nbsp;&nbsp;></a>
-							</form>
-						</div>
-						
-					</div>
-				</div>
-			
-				<div class="right right_shop clearfix">
-					<div class="bg_fff">
-						<h2>SUMMARY</h2>
-						<ul class="cart_ul">
-							<li class="clearfix">
-								<a href="###">
-									<div class="pic_img">
-										<img src="img/jpg/index1_1.jpg"/>
-									</div>
-									<div class="text">
-										<h2>Fuller Peruvian Virgin Hair </h2>
-		 								<p>Body Wavy</p>
-		 								<span>$15.39</span>
-									</div>
-								</a>
-							</li>
-							<li class="clearfix">
-								<a href="###">
-									<div class="pic_img">
-										<img src=""/>
-									</div>
-									<div class="text">
-										<h2>Fuller Peruvian Virgin Hair  </h2>
-		 								<p>Body Wavy</p>
-		 								<span>$15.39</span>
-									</div>
-								</a>
-							</li>
-							<li class="clearfix">
-								<a href="###">
-									<div class="pic_img">
-										<img src=""/>
-									</div>
-									<div class="text">
-										<h2>Fuller Peruvian Virgin Hair  </h2>
-		 								<p>Body Wavy</p>
-		 								<span>$15.39</span>
-									</div>
-								</a>
-							</li>
-							<li class="clearfix">
-								<a href="###">
-									<div class="pic_img">
-										<img src=""/>
-									</div>
-									<div class="text">
-										<h2>Fuller Peruvian Virgin Hair  </h2>
-		 								<p>Body Wavy</p>
-		 								<span>$15.39</span>
-									</div>
-								</a>
-							</li>
-						</ul>
-						<p class="p1">Shipping <span class="fr">$70.00</span></p>
-						<p class="p2">Total <span class="fr">$70.00</span></p>
-						<div class="shop_search">
-							<p>
-								If you have coupons, please fill them out. If not, 
-								please pay.
-							</p>
-							<label for="">
-								<input type="text" placeholder="coupon code"/>
-								<button>CONFIRM</button>
-							</label>
-						</div>
-						<div class="btn">
-						</div>
-					</div>
-				</div>
-			
-			</div>
-		</div>
-		
-		<!--yd内容-->
-		<div class="content in_content zf_13 new_in_content clearfix pc_hide">
-			
+		<!--移动内容1-->
+		<div class="content in_content zf_1 new_in_content clearfix pc_hide">
 			<div class="zf_con clearfix">
 				<div class="zfbt clearfix">
 					<span>1</span>
 					<h1>Shipping Address</h1>
-					<div class="del clearfix">
-						<svg t="1539766974948" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5269" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32">
-							<path d="M793.6 998.4H220.16c-51.2 0-97.28-40.96-97.28-97.28V261.12c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v645.12c0 25.6 20.48 46.08 46.08 46.08h573.44c25.6 0 46.08-20.48 46.08-46.08v-563.2c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v563.2c0 46.08-46.08 92.16-97.28 92.16z" p-id="5270" fill="#333"></path>
-							<path d="M51.2 266.24c-10.24 0-20.48-10.24-25.6-25.6 0-15.36 10.24-25.6 25.6-25.6l916.48-81.92c15.36 0 25.6 10.24 25.6 25.6s-10.24 25.6-25.6 25.6L51.2 266.24c5.12 0 0 0 0 0z" p-id="5271" fill="#333"></path>
-							<path d="M343.04 230.4c-10.24 0-20.48-10.24-25.6-25.6l-5.12-76.8C307.2 87.04 337.92 51.2 378.88 46.08l225.28-20.48c20.48 0 40.96 5.12 56.32 15.36 15.36 10.24 25.6 30.72 25.6 51.2l5.12 81.92c0 15.36-10.24 25.6-25.6 25.6s-25.6-10.24-25.6-25.6l-5.12-81.92c0-10.24-10.24-20.48-25.6-20.48l-225.28 25.6c-5.12 0-10.24 5.12-15.36 10.24-5.12 0-5.12 10.24-5.12 15.36L368.64 204.8c0 10.24-10.24 25.6-25.6 25.6 5.12 0 0 0 0 0zM435.2 768c-15.36 0-25.6-15.36-25.6-30.72V399.36c0-15.36 10.24-40.96 25.6-40.96s25.6 25.6 25.6 35.84v337.92c0 15.36-10.24 35.84-25.6 35.84zM588.8 768c-15.36 0-25.6-15.36-25.6-30.72V465.92c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v271.36c0 15.36-10.24 30.72-25.6 30.72z" p-id="5272" fill="#333"></path>
-						</svg>	
-					</div>
 				</div>
 				
-				<form method="post">
-					<div class="form_div">
-						<label class="true clearfix" for="">
-							<em class="gx"></em>
-							<input type="text" value="BIHUI"/>
-							<p class="ts_ps">please enter your  </p>
-						</label>
-						<label class="clearfix" for="">
-							<input type="text" value="Last Name"/>
-							<p class="ts_ps off">please enter your Last Name</p>
-						</label>
-						<label class="clearfix" for="">
-							<input type="text" value="Address1"/>
-							<p class="ts_ps">please enter your Last Name</p>
-						</label>
-						<label class="clearfix" for="">
-							<input type="text" value="Address2"/>
-							<p class="ts_ps">please enter your Last Name</p>
-						</label>
-						<label class="w_48 fl clearfix" for="">
-							<input type="text" value="City"/>
-							<p class="ts_ps">please enter your Last Name</p>
-						</label>
-						<label class="w_48 fr clearfix" for="">
-							<input type="text" value="Post Code"/>
-							<p class="ts_ps">please enter your Last Name</p>
-						</label>
-						<label class="w_48 fl clearfix" for="">
-							<select name="">
-								<option value="">State</option>
-								<option value="">State2</option>
-								<option value="">State3</option>
-								<option value="">State4</option>
-							</select>
-							<p class="ts_ps">please enter your Last Name</p>
-						</label>
-						<label class="w_48 fr clearfix" for="">
-							<select name="">
-								<option value="">Country</option>
-								<option value="">Country2</option>
-								<option value="">Country3</option>
-								<option value="">Country4</option>
-							</select>
-							<p class="ts_ps">please enter your Last Name</p>
-						</label>
-						<label class="clearfix" for="">
-							<input type="text" value="+2345601634559"/>
-							<p class="ts_ps">please enter your Last Name</p>
-						</label>
-						<div class="def_kg clearfix">
-							<p>Set default address</p>
-							<span class="kg "></span>
-						</div>
-						<input class="tj_a" type="submit" value="SAVE"/>
-					</div>
-				</form>
+				<ol class="zf_1_ol clearfix">
+					<li class="active">
+						<p>Xiaoxiao</p>
+						<p>Jiangxia, baiyun district, guangzhou, guangdong province.</p>
+						<p>guangzhou 510000</p>
+						<p>Guangdong</p>
+						<p>China</p>
+						<p>+2345601634559</p>
+						<span class="def">Default</span>
+						<a class="edit" href="###">Edit</a>
+					</li>
+					<li>
+						<p>Xiaoxiao</p>
+						<p>Jiangxia, baiyun district, guangzhou, guangdong province.</p>
+						<p>guangzhou 510000</p>
+						<p>Guangdong</p>
+						<p>China</p>
+						<p>+2345601634559</p>
+						<a class="edit" href="###">Edit</a>
+					</li>
+					<li>
+						<p>Xiaoxiao</p>
+						<p>Jiangxia, baiyun district, guangzhou, guangdong province.</p>
+						<p>guangzhou 510000</p>
+						<p>Guangdong</p>
+						<p>China</p>
+						<p>+2345601634559</p>
+						<a class="edit" href="###">Edit</a>
+					</li>
+				</ol>
+				<a class="add_a" href="###">+  Add New Address</a>
+				
+				<a class="tj_a" href="###">SAVE & CONTINUE</a>
+				
 			</div>
 		</div>
 		
-	 	<!--弹窗确定取消-->
-	 	<div class="choice_tc clearfix ">
-	 		<div class="text">
-	 			<p><span>Are you sure?</span></p>
-	 			<div class="btn">
-	 				<button class="qd_btn">Yes</button>
-	 				<button class="qx_btn">No</button>
-	 			</div>
-	 		</div>
-	 	</div>
 		
 		<!--返回顶部-->
 		<div class="xf_right">
@@ -633,34 +440,26 @@
 </html>
 <script type="text/javascript">
 	$(function(){
-		$(".def_kg .kg").click(function(){
-			if($(this).hasClass("active")){
-				$(this).removeClass("active");
-			}else{
-				$(this).addClass("active");
-			}
+//		支付方式选择
+		$(".pay_ul>li").click(function(){
+			$(this).addClass("active").siblings().removeClass("active");
+			$(".pay_ul>li .ts_p").hide();
 		})
 		
-		$(".del").click(function(){
-			$(".choice_tc").fadeIn();
-			$("body").css("overflow","hidden");
-		})
-		
-		$(".choice_tc .qx_btn").click(function(){
-			$(".choice_tc").fadeOut();
-			$("body").css("overflow","");
-		})
-		$(".choice_tc").click(function(e){
-			var close = $('.choice_tc .text'); 
-		   	if(!close.is(e.target) && close.has(e.target).length === 0){
-		   		$(".choice_tc").fadeOut();
-		   		$("body").css("overflow","");
-			}
-		})
-		$(".choice_tc .qd_btn").click(function(){
-			$(".choice_tc").fadeOut();
-			$("body").css("overflow","");
-			location.href="http://www.baidu.com";
+		//提交
+		$(".tj_a").click(function(){
+			var i=0;
+			var len = $(".pay_ul>li").length;
+			$(".pay_ul>li").each(function(){
+				if($(this).hasClass("active")){
+					//执行提交后的事件
+				}else{
+					i++;
+					if(i==len){
+						tips('Please Select Shipping Method','gantan')
+					}
+				}
+			})
 		})
 	})
 </script>
