--- a/catalog/view/theme/default/x_zf_22.html
+++ b/catalog/view/theme/default/x_zf_22.html
@@ -212,9 +212,8 @@
 				<p>SHIPPING METHOD</p>
 			</div>
 		</div>
-		<!--内容-->
-		<div class="content in_content zf_22  new_in_content">
-			
+		<!--移动内容3-->
+		<div class="content in_content zf_22  new_in_content clearfix pc_hide">
 			<div class="zf_con clearfix">
 				<div class="zfbt clearfix">
 					<span>2</span>
