--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -13,9 +13,14 @@
 	background: rgba(255,255,255,.5) url(../img/png/lb_right.png) no-repeat center  center;
 }
 .swiper-pagination-bullet-active{background:#f23030 !important;}
-	
+.goog-te-banner-frame{display: none;}	
+
 
 @media only screen and (min-width:921px ) {
+	.fanyi{position: absolute;left: 130px;top: 20px;
+	height: 24px;line-height:24px;display: inline-block;overflow: hidden;}
+	.fanyi select{float: left;padding: 0;margin: 0 !important;height: 24px;line-height: 24px; border: 1px solid #ddd; }
+	
 	.banner .swiper-button-next,.banner .swiper-button-prev{opacity: 0;transition: all .5s;}
 	.banner:hover .swiper-button-next,
 	.banner:hover .swiper-button-prev{opacity: 1;}
@@ -712,14 +717,13 @@
 	.address_content .address_ul li span{font-size: 0.16rem;line-height: 0.3rem;display: block;}
 	.address_content .add_a{width: 100%;display: block;height: 2rem;line-height: 2rem;border: 1px solid #eee;box-sizing: border-box;font-size: 16px;color: #333;
 	background:  #f5f5f5;text-align: center;}	
-	.address_content .add_a>span{background: url(../img/png/file.png) no-repeat left center/0.3rem 0.3rem;display: inline-block !important;padding-left: 0.4rem;}
+	.address_content .add_a>span{background: url(../img/png/file.png) no-repeat left center/0.3rem 0.3rem;display: inline-block !important;padding-left: 0.4rem;line-height: 2rem !important;}
 	
 	.address_content .address_ul li .def{display: none;}
 	.address_content .address_ul li.active a.def{display: block;width: 0.9rem;height: 0.3rem;text-align: center;line-height: 0.3rem;color: #fff;
 	font-size: 0.16rem;background: #f23030;border-radius: 0.2rem;position: absolute;right: 0.7rem;bottom: 0.3rem;}
 	.address_content .address_ul li p{font-size: 0.16rem;line-height: 0.3rem;display: block;}
 	.address_content .address_ul li a.a_btn{display: inline-block;position: absolute;right: 0.2rem;bottom: 0.3rem;font-size:0.18rem;border-bottom: 1px solid #333;}
-	
 	
 	.address_content .express_ul>li{border-top: 1px solid #dddddd;padding: 1.56vw 0;}
 	.address_content .express_ul dl{float: left;display:block;}
@@ -731,13 +735,9 @@
 	.address_content .express_ul dd span{font-size: 14px;line-height: 0.3rem;display: block;float: left;}
 	.address_content .express_ul dd img{width: 6.25vw;height: 2.08vw;display: block;}
 	.address_content .dx_label{display: block;height: 0.3rem;width: 0.3rem;float: left; position: relative;margin-right: 8px;}
-	/*.address_content dd.kd .dx_label{top: 0.4vw;}*/
 	.address_content .dx_label span{font-size: 0.93vw;color: #333;font-weight: bold;display: block;margin-left: 35px;}
 	.address_content .check_input{width: 0.3rem;height: 0.3rem;display: block; position: absolute;top: 50%;margin-top: -0.15rem; left: 0;z-index: 2;cursor: pointer;opacity: 0;}
 	.address_content .check_i{width: 0.3rem;height: 0.3rem;display: block; position: absolute;top: 50%;margin-top: -0.15rem; left: 0;z-index: 1;}
-	/*.address_content .check_i.active:after{display: block;position: absolute;top: 4px;left: 3px;content: "";border: 2px solid #000; width: 10px;height: 4px;
-	 border-width: 0 0 2px 2px;transform: rotate(-45deg); }*/
-	 
 	.right_shop{float: right;width: 26%;background:#fff url(../img/loading.gif) no-repeat center top 5vw;}
 	.right_shop>h2{font-size: 1.25vw;line-height: 1.25vw;margin-top: 2.5vw;padding:  0 2.08vw;}
 	.right_shop>.bg_fff>h2{font-size: 1.25vw;line-height: 1.25vw;margin-top: 2.5vw;padding:  0 2.08vw;}
@@ -1561,21 +1561,6 @@
 	.def_kg .kg.active{border:0.03rem solid #f5321f;}
 	.def_kg .kg.active:before{background: #f5321f;box-shadow: 2px 0 6px 1px rgba(245,50,31,.27);left: 0.6rem;}
 	
-	/***********zf_21**********************/
-	/*.pay_ul{padding-bottom: 0.4rem;}
-	.pay_ul>li{border: 1px solid #ddd;padding: 0.3rem 0.2rem;margin-bottom: 0.4rem;}
-	.pay_ul>li.active{background: #fff9f9;}
-	.pay_ul>li>span{font-size: 0.26rem;font-family: helveticaei;color: #666;display: block;margin-bottom: 0.24rem;clear: both;}
-	.pay_ul>li label{display: block;width: 100%;box-sizing: border-box;}
-	.pay_ul>li label.gx{background: url(../img/png/new_6.png) no-repeat left center/0.3rem;padding-left: 0.52rem;}
-	.pay_ul>li.active label.gx{background: url(../img/png/new_6_.png) no-repeat left center/0.3rem;}
-	.pay_ul>li label img{display: inline-block;float: left;width: 1.32rem;height: 0.4rem;margin: 0 0.15rem 0 0rem;}
-	.pay_ul>li label p{display: inline-block;float: left;font-family: helvetica;font-size: 0.24rem;color: #333;line-height: 0.4rem;cursor: pointer;}
-	.pay_ul>li p.ts_p{color: #f33030;height: 0.32rem;line-height: 0.32rem;padding-left: 0.45rem;background: url(../img/png/new_7.png) no-repeat left center/0.32rem;
-	display: block;clear: both;margin:0.15rem 0 0.3rem 0;}
-	.pay_ul>li label.red p{color: #f33030;}
-	.pay_ul>li hr{width: 100%;height: 1px;background: #ddd;border: none;display: block;margin: 0.3rem 0;}*/
-	
 	/***********zf_22**********************/
 	.zf_22 .pay_ul>li{border: none;padding: 0}
 	.zf_22 .pay_ul>li.active{background: transparent;}
@@ -1619,6 +1604,9 @@
 }
 
 @media only screen and (max-width:920px ) {
+	.fanyi{position: absolute;right: 0.4rem;top: 0.9rem;width: 1.3rem;
+	height: 0.24rem;line-height:0.24rem;display: inline-block;overflow: hidden;}
+	.fanyi select{float: left;padding: 0;margin: 0 !important;height: 0.24rem;line-height: 0.24rem; border: 1px solid #ddd;width: 1.3rem; }
 	
 	/*index图片弹窗*/
 	.img_modal{position: fixed;width: 100%;height: 100%;left: 0;top: 0;background: transparent;display: none;}
@@ -1995,7 +1983,7 @@
 	/****新订单列表****/
 	.new_order{background: #f5f5f5;}
 	.new_order .nav_t{background: #fff;padding:0 0.3rem;margin-bottom: 0.2rem;}
-	.new_order .nav_t li{display: inline-block;float: left;margin-right: 0.24rem;}
+	.new_order .nav_t li{display: inline-block;float: left;margin-right: 0.38rem;}
 	.new_order .nav_t li:last-child{margin-right: 0;}
 	.new_order .nav_t li a{display: inline-block;color: #555;font-size: 0.26rem;font-family: helvetica;padding: 0 0.1rem;
 	line-height: 0.77rem;height: 0.8rem;border-bottom: 0.05rem solid transparent;box-sizing: border-box;}
@@ -2009,7 +1997,7 @@
 	.new_order .zt_ul .text{width: 5.1rem;float: left;}
 	.new_order .zt_ul .text p{font-size: 0.22rem;font-family: helvetica;color: #333;margin-bottom: 0.1rem;}
 	.new_order .zt_ul .text em{display: inline-block;padding: 0 0.22rem;height: 0.36rem;line-height: 0.36rem;font-size: 0.2rem;font-family: helvetica;color: #666;
-	border-radius: 0.2rem;background: #f5f5f5;float: left;margin: 0 0.1rem 0.1rem 0;}
+	border-radius: 0.2rem;background: #f5f5f5;float: left;margin: 0 0.1rem 0.1rem 0;min-width: 1.5rem;}
 	.new_order .zt_ul .text .num{position: absolute;bottom: 0.65rem;right: 0;font-size: 0.28rem;font-family: helvetica;color: #666;}
 	.new_order .zt_ul .text .price{position: absolute;bottom: 0.25rem;right: 0;font-size: 0.28rem;font-family: helvetica;color: #333;}
 	.new_order .zt_ol{overflow: hidden;}
@@ -2038,9 +2026,10 @@
 	.new_lxwm_tc .text{width: 6.9rem;position: absolute;top: 50%;margin-top: -1.37rem;left: 50%;margin-left: -3.45rem; background: #f5f5f5;text-align: center;}	
 	.new_lxwm_tc .text p{font-size: 0.26rem;font-family: helvetica;padding: 0 0.2rem;margin: 0.8rem 0 0.4rem 0;}
 	.new_lxwm_tc .text .btn{display: inline-block;margin-bottom: 0.6rem;}
-	.new_lxwm_tc .text .btn a{width: 2.6rem;height: 0.6rem;line-height: 0.6rem; border-radius: 0.5rem;display: inline-block;font-size: 0.3rem;color: #fff;font-family: helvetica;}
+	.new_lxwm_tc .text .btn a{width: 1.6rem;height: 0.6rem;line-height: 0.6rem; border-radius: 0.5rem;display: inline-block;font-size: 0.3rem;color: #fff;font-family: helvetica;}
 	.new_lxwm_tc .text .btn a.wh_a{background: #2eb343;float: left;margin-right: 0.3rem;}
-	.new_lxwm_tc .text .btn a.sk_a{background: #01a9ea;float: right;margin-left: 0.3rem;}
+	.new_lxwm_tc .text .btn a.sk_a{background: #01a9ea;float: left;margin:0 0.15rem;}
+	.new_lxwm_tc .text .btn a.em_a{background: burlywood;float: right;margin-left: 0.3rem;}
 	.new_lxwm_tc .text .close{width: 0.6rem;height: 0.6rem;display: block;position: absolute;right: 0.1rem;top: 0.1rem;
 	background: url(../img/png/close2.png) no-repeat center/0.2rem;}
 	/**orders_details**/
