--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -759,7 +759,7 @@
 	.right_shop .shop_search label{width: 100%;position: relative;display: block;margin: 1.04vw 0 0.25vw 0;}
 	.right_shop .shop_search input{border: 1px solid #e4e4e4;color: #333;padding: 0 0.52vw;height: 40px;line-height: 40px;font-size: 16px;}
 	.right_shop .shop_search button{position: absolute;top: 0;right:0;width: 96px;height: 40px;color: #fff;background: #333;border: none;
-	border-left: 1px solid #e4e4e4;font-size: 16px;display: none;}
+	border-left: 1px solid #e4e4e4;font-size: 16px;display: block;}
 	.right_shop .shop_search button:hover{background: #666;}
 	.right_shop .btn{padding-top: 2.08vw;}
 	.right_shop a.a_btn{width: 100%;background: #333;text-align: center;display: block;height: 40px;line-height: 40px;border-radius: 4px;
